posicionando logo klep / estilizando botões

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
     <div class="col-md-3 mb-2 mb-md-0">
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-        <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+        <img width="45" height="45" src="../../assets/images/k.png" alt="">
       </a>
     </div>
 
@@ -13,8 +13,8 @@
     </ul>
 
     <div class="col-md-3 text-end">
-      <button type="button" class="btn btn-outline-primary me-2">Entrar</button>
-      <button type="button" class="btn btn-primary">Cadastrar</button>
+      <button type="button" class="btn btn-outline-success me-2">Entrar</button>
+      <button type="button" class="btn btn-success">Cadastrar</button>
     </div>
   </header>
 </div>
