FEAT: adding example photos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,33 +1,36 @@
-<div class="container">
-  <div class="row">
-    <div class="col my-auto">
-      <button>adler</button>
+<div class="container vh-100">
+  <div class="row vh-100">
+    <div class="col my-auto text-center">
+      <h1>Conteúdo Centralizado Verticalmente</h1>
     </div>
   </div>
-  <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+</div>
+<div class="container">
+  <div class="row">
     <div class="col">
-      <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-          <h3 class="pt-5 display-6 lh-1 fw-bold">Mais ágil!</h3>
+      <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden rounded-4" style="background-image: url('../assets/images/image-bank/photo-1.png')">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-white">
+              <h3 class="pt-5 display-6 lh-1 fw-bold">Mais ágil!</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden rounded-4" style="background-image: url('../assets/images/image-bank/photo-2.png')">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-white">
+              <h3 class="pt-5 display-6 lh-1 fw-bold">Mais fácil!</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden rounded-4" style="background-image: url('../assets/images/image-bank/photo-3.png')">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-white">
+              <h3 class="pt-5 display-6 lh-1 fw-bold">Mais rapido!</h3>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
-    <div class="col">
-      <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-          <h3 class="pt-5 display-6 lh-1 fw-bold">Mais fácil!</h3>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-          <h3 class="pt-5 display-6 lh-1 fw-bold">Mais rápido!</h3>
-        </div>
-      </div>
-    </div>
-
   </div>
 </div>
